version/0.34/_sources/api/solver/_autosummary/settings/phase_4.rst.txt
:orphan:

.. _phase_4:

phase
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.phase_4
    :show-inheritance:

.. rubric:: Methods

========================================   =====================================================

Method                                                                                   Summary

========================================   =====================================================
:ref:`create <create>`                         Create a new instance of the current object type.

:ref:`delete <delete>`                                                  Delete selected objects.

:ref:`rename <rename>`                                                        Rename the object.

:ref:`list <list>`                                                List the names of the objects.

:ref:`list_properties <list_properties>`                   List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                                    Create a copy of the object.

========================================   =====================================================

.. rubric:: Named object type

:ref:`phase_4_child <phase_4_child>`


.. rubric:: Included in:

================================================   =======================================

Parent                                                                             Summary

================================================   =======================================
:ref:`settings_2 <settings_2>`                          Domain name to define settings on.

:ref:`exhaust_fan_1_child <exhaust_fan_1_child>`       'child_object_type' of exhaust_fan.

================================================   =======================================

